--- a/around-backend/conf/deploy.yml
+++ b/around-backend/conf/deploy.yml
@@ -1,10 +1,9 @@
 elasticsearch:
-  address: "http://10.128.0.69:9200"
-  username: "sean"
-  password: "12345678"
+  address: 
+  username: 
+  password: 
 
 gcs:
-  bucket: "sean-bucket"
-
+  bucket: 
 token:
-  secret: "secret"
+  secret: 
